--- a/style.css
+++ b/style.css
@@ -1,7 +1,110 @@
 body{
-    color: blackrgb(255,255,255);
+    color:(255,255,255);
     background: rgb(rgb(0, 0, 0), rgb(18, 19, 18), rgb(25, 25, 26));
+    margim :opx ;
+    font-family:  "chakra petch" ,sans-serif;
+    margin-bottom: 100px;
+  }  
+
+header{
+border-bottom: solid 2px;rgb(0,0,0);
+padding: 20px;
+font-size: 32px;
+color: rgb(42, 122, 228);
+  }
+
+.CHAMADA{
+background: rgb(0,0,0);
+padding-bottom: 80PX;
+padding-top: 80PX;
+display: flex;
+justify-content: center; 
 }
+
+.CHAMADA-texto {
+  margin-right: 5%;
+}
+
+h1{
+  font-size: 40px;
+}
+
+p{
+  font: 20px;
+}
+
+.categoria-videos{
+display: flex;
+overflow-x: auto;
+gap:10px;  
+}  
+
+.categoria{
+padding-left: 20px
+padding-right: 50px
+margin-top: 50px;  
+}
+
+.categoria-videos img{
+opacity: 0.5;
+height: 200px; 
+}
+  
+.categoria-videos img :hover {
+  opacity: 1.0;
+  border: 3px solid black;
+}
+
+.categoria h2 {
+  color: white 
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
